--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta charset="windows-1273">
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
