--- a/index.html
+++ b/index.html
@@ -6,7 +6,103 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+    <header>
+      <div>логотип и пара кнопонк и оформить заказ</div>
+    </header>
+
+
+    <main>
+      <div>c навигацией</div>
+
+      <section>
+
+        <div class="class_2_3">
+          <div>
+            <article class="card card-yellow">materials</article>
+            <article class="card card--blue">instrument</article>
+          </div>
+          <div>
+            slider
+          </div>
+        </div>
+        <div class="_1_3">
+          <article class="card card-violet">tecnics</article>
+          <article class="card card-green">sale</article>
+          <article class="card card--yellow">delivery</article>
+        </div>
+
+      </section>
+
+      <section class="populars">
+        <div class="populars__header">
+          <h2>популярные товары</h2>
+          <button></button>
+        </div>
+        <div class="populars__products">
+          <div>drill1</div>
+          <div>drill2</div>
+          <div>drill3</div>
+          <div>drill4</div>
+        </div>
+      </section>
+
+      <section class='populars'>
+        <div class="populars__header">
+          <h2>популярные бренды</h2>
+          <button></button>
+        </div>
+        <div class="populars__brands">
+          <div>brand 1</div>
+          <div>brand 2</div>
+          <div>brand 3</div>
+          <div>brand 4</div>
+          <div>brand 5</div>
+          <div>brand 6</div>
+          <div>brand 7</div>
+          <div>brand 8</div>
+        </div>
+
+      </section>
+
+      <section class="sevices">
+        <div>
+          <h4>сервисы</h4>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div>
+          <ul>
+            <li></li>
+            <li></li>
+          </ul>
+          <div>
+            <h4>доставка</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+        </div>
+      </section>
+
+      <section>contacts</section>
+
+
+
+    </main>
+
+    <footer>
+
+      section with logo and contacts
+
+      section with socials
+    </footer>
 
   </body>
 </html>
