--- a/index.html
+++ b/index.html
@@ -7,8 +7,40 @@
   <body>
 
     <header>
-      <div>логотип и пара кнопонк и оформить заказ</div>
+      <div>логотип и пара кнопонк и оформить заказ
+	      <a href="#">
+		      <img src="img/logo.png">...</a>
+		      <span class="find">Поиск</span>
+		      <span class="marks">Закладки</span>
+		      <span class="basket">Корзина</span>
+		      <button type="button">Оформить заказ</button>
+      </div>
+      <div><h1>Интернет-магазин строительных материалов и инструментовдля ремонта</h1></div>
+      <div class="contact-header">
+	      <p>+7-987-846187</p>
+	      <p>г. Санкт-Петербург ул. Большая Конюшная 19</p>
+      </div>
+    <div class="auth">
+	    <ul>
+		    <li><button type="button">Войти</li>
+		    <li><button type="button">Регистрация</li>
+	    </ul>
+	    </div>
+	    <nav class="nav-header">
+		    <section class="main-nav-section">
+		    <ul class="ul-nav-header">
+			    <li><a href="#">Главная</a></li>
+			    <li><a href="/company.html">Компания</a></li>
+			    <li><a href="/catalog.html">Каталог</a></li>
+			    <li><a href="/news.html">Новости</a></li>
+			    <li><a href="/50off.html">Спецпредложение</a></li>
+			    <li><a href="/divelery.html">Доставка</a></li>
+			    <li><a href="/contact.html">Контакты</a></li>
+		    </ul>
+		    </section>
+	    </nav>
     </header>
+     
 
 
     <main>
@@ -18,17 +50,29 @@
 
         <div class="class_2_3">
           <div>
-            <article class="card card-yellow">materials</article>
-            <article class="card card--blue">instrument</article>
+            <article class="category">Материалы
+	            <a href="/materials.html" class="category">На любой вкус</a>
+            </article>
+            <article class="card card--blue">Инструменты
+	            <a class="category" href="/instrument.html">На все случаи</a>
+            </article>
           </div>
-          <div>
-            slider
+          <div class="slider">
+	          <button type="button"></button>
+	          <button type="button"></button>
           </div>
         </div>
         <div class="_1_3">
-          <article class="card card-violet">tecnics</article>
-          <article class="card card-green">sale</article>
-          <article class="card card--yellow">delivery</article>
+          <article class="card card-violet">Техника
+	          <a class="category" href="/tehnic.html">Для стройки</a>
+          </article>
+          <article class="card card-green">Скидки 50%
+	          <a href="/salles.html" class="category">На 350 товаров</a>
+	          
+          </article>
+          <article class="card card-yellow">Доставка
+	         <a class="category" href="/freeshipping.html">Бесплатно</a>
+          </article>
         </div>
 
       </section>
