Осталось закончить футер
Почти готовая разметка

--- a/index.html
+++ b/index.html
@@ -83,27 +83,37 @@
           <button></button>
         </div>
         <div class="populars__products">
-          <div>drill1</div>
-          <div>drill2</div>
-          <div>drill3</div>
-          <div>drill4</div>
+          <div class="item">Перфоратор BOSCH BFG 900
+	          <a href="/item/bosh_bfg9000.html">25500 Р.</a>
+          </div>
+          <div class="item">drill2
+	          <a href="/item/bosh_bfg3000.html">15500 Р.</a>
+          </div>
+          <div class="item">drill3
+	          <a href="/item/bosh_bfg6000.html">25500 Р.</a>
+          </div>
+          <div class="item item-new">drill4
+	          <a href="/item/bosh_bfg2000.html">12500 Р.</a>
+          </div>
         </div>
       </section>
 
       <section class='populars'>
         <div class="populars__header">
-          <h2>популярные бренды</h2>
-          <button></button>
+          <h2>популярные производители</h2>
+          <button>
+          </button>
         </div>
         <div class="populars__brands">
-          <div>brand 1</div>
-          <div>brand 2</div>
-          <div>brand 3</div>
-          <div>brand 4</div>
-          <div>brand 5</div>
-          <div>brand 6</div>
-          <div>brand 7</div>
-          <div>brand 8</div>
+          <div class="brand">BOSH
+          </div>
+          <div class="brand">MAKITA</div>
+          <div class="brand">DE WALT</div>
+          <div class="brand">ИНТЕРСКОЛ</div>
+          <div class="brand">HITACHI</div>
+          <div class="brand">LG</div>
+          <div class="brand">AEG POWER SOLUTION</div>
+          <div class="brand">METABO WORK DONT PLAY</div>
         </div>
 
       </section>
@@ -111,26 +121,21 @@
       <section class="sevices">
         <div>
           <h4>сервисы</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-          tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-          cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-          proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Хороший интернет-магазин отличается от плохого не только ценами!<br>
+	          Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         </div>
         <div>
-          <ul>
-            <li></li>
-            <li></li>
+          <ul class="servise-ul">
+            <li class"servise">Доставка</li>
+            <li class"garanty">Гарантия</li>
+            <li class"credit">Гарантия</li>
+
           </ul>
           <div>
             <h4>доставка</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Мы с удовольствием доставим ваш товар прямо<br>
+	             к вашему подъезду совершенно бесплатно!<br>
+	             Ведь мы неплохо заработаем,<br>поднимая его на ваш этаж</p>
           </div>
         </div>
       </section>
@@ -142,10 +147,13 @@
     </main>
 
     <footer>
+	    <section class="sec-footer">
+		    
+ <a href="#">
+		      <img src="img/logo.png">...</a>
+		      <span class="adress">г. Санкт-Петербург, ул. Большая Конюшенная д.19/8<br>
+		      +7(812)555-05-55</span>
 
-      section with logo and contacts
-
-      section with socials
     </footer>
 
   </body>
