--- a/index.html
+++ b/index.html
@@ -199,8 +199,13 @@
 			    </div>
 			    <div>
 				    <p>Обратная связь
-					    <span class="orange">mail@htmlacademy.ru</span>
-
+					    <span class="orange"><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></span>
+				    </p>
+			    </div>
+			    <div>
+				    <p>Разработано -
+					    <span class="orange"><a href="htmlacademy.ru">htmlacademy.ru</a></span>
+				    </p></div></section>
     </footer>
 
   </body>
