Теперь точно закончил

--- a/catalog.html
+++ b/catalog.html
@@ -137,6 +137,7 @@
 					    <span class="orange"><a href="htmlacademy.ru">htmlacademy.ru</a></span>
 				    </p></div></section>
     </footer>
+    </body>
 </html>
 		  
 	    
